--- a/style.css
+++ b/style.css
@@ -13,30 +13,42 @@ body {
 
 .container{
     background-color: hsl(0, 0%, 100%);
-    border-radius: 30px;
-    padding: 5px 5px 2px 5px;
-    box-shadow: 0 10px 10px rgba(212, 212, 212, 0);
-    width: 300px;
-    /* height: 100hv; */
-    max-width: 100%;
-    box-sizing: 20px;
-    
+    border-radius: 20px;
+    padding: 10px 10px 10px 10px;
+    box-shadow: 10px 20px 20px rgba(212, 212, 212, 0);
+    width: 250px;
+}
+
+.image-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 img{
-    display: flex;
     border-radius: 10px;
-    width: 50%;
+    width: 100%;
     height: 50%;
+    text-align: center;
 }
 
 .p1 {
     font-size: 18px;
     font-weight: bold;
+    text-align: center;
+}
+
+.p-price{
+    margin-bottom: 0;
 }
 
 .p2 {
     font-size: 14px;
-    line-height: 1.5;
-    /* text-decoration-color: rgb(53, 51, 51); */
+    /* line-height: 1.5; */
+    text-align: center;
+    padding: 5px;
+    color: darkgray;
+}
+.p2 p {
+    margin-top: 0;
 }
