--- a/style.css
+++ b/style.css
@@ -17,6 +17,8 @@ body {
     padding: 10px 10px 10px 10px;
     box-shadow: 10px 20px 20px rgba(212, 212, 212, 0);
     width: 250px;
+    justify-items: center;
+    align-items: center;
 }
 
 .image-container {
